# XInput-Emu

./: CMakeLists.txt  main.cpp
.github/workflows/: build.yml  compilar.yml
